--- a/css/style.css
+++ b/css/style.css
@@ -54,19 +54,14 @@ a:active {
 .content {
   margin: 1em 3em;
 }
-.content-left {
-  padding-left: 0;
-}
+
 .container-fluid {
   padding: 1% 3%;
 }
 .featured {
   padding: 1% 3%;
 }
-.featured .high {
-  /* height: 1000px; */
-  margin-bottom: 3%;
-}
+
 .featured-1,
 .featured-2,
 .featured-3,
@@ -123,7 +118,7 @@ a:active {
   line-height: 100%;
 }
 .featured .artical-info {
-  font-size: 1.5em;
+  font-size: 120%;
 }
 .featured-1:hover img,
 .featured-2:hover img,
@@ -165,4 +160,8 @@ a:active {
   width: auto;
   height: 3em;
   margin: 1em;
+}
+.icons a {
+  display: inline-block;
+  cursor: pointer;
 }
